tests/netgen/spider/errors/radius_9_9/errors.netgen
Warning: Spider networks with many arms should use option ommit-center
Warning: The radius of spider networks should be at least 14.50 for the given lanenumber, lanewidth and junction radius
Warning: Intersecting left turns at junction 'B1' from lane 'C1B1_0' and lane 'A1B1_0' (increase junction radius to avoid this).
Warning: Intersecting left turns at junction 'B1' from lane 'B7B1_0' and lane 'B2B1_0' (increase junction radius to avoid this).
Warning: Intersecting left turns at junction 'B2' from lane 'C2B2_0' and lane 'A1B2_0' (increase junction radius to avoid this).
Warning: Intersecting left turns at junction 'B2' from lane 'B3B2_0' and lane 'B1B2_0' (increase junction radius to avoid this).
Warning: Intersecting left turns at junction 'B3' from lane 'B4B3_0' and lane 'B2B3_0' (increase junction radius to avoid this).
Warning: Intersecting left turns at junction 'B3' from lane 'C3B3_0' and lane 'A1B3_0' (increase junction radius to avoid this).
Warning: Intersecting left turns at junction 'B4' from lane 'B5B4_0' and lane 'B3B4_0' (increase junction radius to avoid this).
Warning: Intersecting left turns at junction 'B4' from lane 'C4B4_0' and lane 'A1B4_0' (increase junction radius to avoid this).
Warning: Intersecting left turns at junction 'B5' from lane 'B6B5_0' and lane 'B4B5_0' (increase junction radius to avoid this).
Warning: Intersecting left turns at junction 'B5' from lane 'C5B5_0' and lane 'A1B5_0' (increase junction radius to avoid this).
Warning: Intersecting left turns at junction 'B6' from lane 'B7B6_0' and lane 'B5B6_0' (increase junction radius to avoid this).
Warning: Intersecting left turns at junction 'B6' from lane 'C6B6_0' and lane 'A1B6_0' (increase junction radius to avoid this).
Warning: Intersecting left turns at junction 'B7' from lane 'C7B7_0' and lane 'A1B7_0' (increase junction radius to avoid this).
Warning: Intersecting left turns at junction 'B7' from lane 'B6B7_0' and lane 'B1B7_0' (increase junction radius to avoid this).
